--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -46,8 +46,8 @@
 <div class="editor-help">
 	<div class="row">
 		<div class="col-xs-12">
-			<button class="btn btn-default btn-sm toggle-help pull-right">Hide Help</button>
-			<h3 class="text-center">Help</h3>
+			<button class="btn btn-default btn-sm toggle-help pull-right">Hide Guide</button>
+			<h3 class="text-center">Editor Guide</h3>
 		</div>
 	</div>
 	<div class="container">
