added rocque layer

--- a/templates/whitechapel_pages/page.html
+++ b/templates/whitechapel_pages/page.html
@@ -1,6 +1,6 @@
 {% extends 'map/base.html' %}
 {% block content %}
-<div id="" class="map-small" style="background: url('/media/{{ page.banner_image }}'); background-size: cover; background-position: center;" class="hidden-sm hidden-xs">
+<div id="" class="map-small" style="background: url('/media/{{ page.banner_image_1 }}'); background-size: cover; background-position: center;" class="hidden-sm hidden-xs">
 </div>
 <div class="container">
 	<div class="row">
