--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,7 +14,7 @@
           <div class="col-xs-12 col-md-7">
           <h3>Contribute to Survey of London Whitechapel</h3>
           <hr>
-          <p>To start contributing to Survey of London Whitechapel, log in with Google or Facebook using the buttons on the right.</p>
+          <p>To start contributing to Survey of London Whitechapel, log in with Google using the button on the right.</p>
           <p>If you'd rather have a separate account for Survey of London Whitechapel, you can <a href="{{ signup_url }}">sign up for one here</a>.</p>
           </div>
         <div class="col-xs-12 col-md-5">
