v minor mod to search results

--- a/templates/map/results_base.html
+++ b/templates/map/results_base.html
@@ -9,7 +9,7 @@
 			{% block results_title %}
 			{% endblock %}
 			{% if not documents and not images and not contributors %}
-				<h3>No results.</h3>
+				<h3>No documents or images found.</h3>
 			{% else %}
 			<ul class="nav nav-tabs" role="tablist" id="docTabs">
 				{% if documents %}
