--- a/templates/map/index.html
+++ b/templates/map/index.html
@@ -8,7 +8,7 @@
 					<div class="modal-body">
 		        		<h1>Welcome!</h1>
 		        		<p>Click on a building to find out more about its history.</p>
-		        		<p>Coloured buildings are ones that we have information about; outlines are ones that we don't. If you have images, media, information, or memories about a place, you can contribute them to the map using the 'Add Content' button.</p>
+		        		<p>Coloured buildings are ones that we have submissions about; outlines are ones that we don't. The deeper the colour, the more submissions the building has attached to it.</p><p>If you have images, media, information, or memories about a place, you can contribute them to the map using the 'Add Content' button.</p>
 		      		</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
