--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -84,18 +84,28 @@ html, body {
 
 .feature-icons {
 	font-size: 22px;
-	color: #F58D16;
-	margin-left: 5px;
+	color: white;
+	padding-left: 5px;
+	padding-top: 5px;
 	height: 33px;
 	display: block;
+	position: absolute;
+	top: 138px;
+	width: 100%;
+	background-color: rgba(0,0,0,0.5);
 }
 
 .feature-overview-thumbnail {
 	margin: 0 0 15px 0;
+	position: relative;
+	height: 170px;
 }
 
 .feature-overview-thumbnail .feature-icons {
-	margin-top: -29px;
+	margin-top: -33px;
+	margin-left: 0px;
+	color: white;
+	background-color: black;
 }
 
 .info {
@@ -225,10 +235,10 @@ html, body {
 	border-bottom: 1px solid #e7e7e7;
 }
 .jumbotron h1, .jumbotron h2, .jumbotron p {
-	text-shadow: 0px 1px 5px #000000;
+	text-shadow: 0px 1px 5px rgba(0, 0, 0, 1);
 }
 .jumbotron .btn {
-	box-shadow:  0px 1px 5px #000000;
+	box-shadow:  0px 1px 5px rgba(0, 0, 0, 1);
 }
 /*footer {
 	background-color: #f8f8f8;
@@ -433,7 +443,7 @@ p#lightbox_caption, p#lightbox_image_author {
 	bottom: 0;
 	width: 100%;
 	background-color: rgba(245, 245, 245, 0.8);
-	height: 270px;
+	height: 60px;
 	border-top: 1px solid #e7e7e7;
 }
 
@@ -470,6 +480,21 @@ p.results-preview {
 
 .highlighted {
 	background-color: rgba(51, 122, 183, 0.2);
+}
+
+.carousel {
+	height: 500px;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	overflow: hidden;
+	display: block;
+	z-index: 1;
+}
+
+.jumbotron.whitechapel_front_page {
+	height: 450px;
+	padding-top: 100px;
 }
 
 /* Medium Editor */
