--- a/templates/map/add_media.html
+++ b/templates/map/add_media.html
@@ -45,7 +45,7 @@
 <div class="editor-help">
 	<div class="row">
 		<div class="col-xs-12">
-			<button class="btn btn-default btn-sm toggle-help pull-right">Hide Guide</button>
+			<button class="btn btn-default btn-sm toggle-help pull-right">Show Guide</button>
 			<h3 class="text-center">Editor Guide</h3>
 		</div>
 	</div>
