--- a/templates/map/feature.html
+++ b/templates/map/feature.html
@@ -1,30 +1,25 @@
 <div class="feature-overview">
 	<button type="button" class="btn btn-default btn-xs close-this"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span></button>
 
-	{% if feature.thumbnail %}
+	
 		{% load thumbnail %}
 		<div class="feature-overview-thumbnail">
 			<a href="{% url 'detail' feature.id %}"><img src="{% thumbnail feature.thumbnail 300x170 crop='0,0' %}"></a>
-			<div class="feature-icons">
-				{% if documents %}<span class="glyphicon glyphicon-file" class="documentIcon" data-toggle="tooltip" data-placement="left" title="Documents"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"  class="imageIcon" data-toggle="tooltip" data-placement="top" title="Images"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play" class="mediaIcon" data-toggle="tooltip" data-placement="bottom" title="Audio or Video"></span> {% endif %}{% if feature.site %}<span class="glyphicon glyphicon-home" class="siteIcon" data-toggle="tooltip" data-placement="right" title="Part of {{ feature.site }}"></span>{% endif %}
-			</div>
 		</div>
-	{% endif %}
+		<div class="feature-icons">
+				{% if documents %}<span class="glyphicon glyphicon-file" class="documentIcon" data-toggle="tooltip" data-placement="left" title="Research and Memories ({{ documents|length }})"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture" class="imageIcon" data-toggle="tooltip" data-placement="top" title="Images ({{ images|length }})"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play" class="mediaIcon" data-toggle="tooltip" data-placement="bottom" title="Audio and Video ({{ media.length }})"></span> {% endif %}{% if feature.site %}<span class="glyphicon glyphicon-home" class="siteIcon" data-toggle="tooltip" data-placement="right" title="Part of {{ feature.site }}"></span>{% endif %}
+			</div>
+	
 	<div class="feature-overview-footer">
 		{% if feature.b_name %}
 			<h2><a href="{% url 'detail' feature.id %}">{{ feature.b_name }}</a></h2>
 			{% else %}
 			<h2><a href="{% url 'detail' feature.id %}">{{ feature.address }}</a></h2>
 		{% endif %}
-		{% if not feature.thumbnail %}
-			<div class="feature-icons">
-				{% if documents %}<span class="glyphicon glyphicon-file" class="documentIcon" data-toggle="tooltip" data-placement="left" title="Documents"></span> {% endif %}{% if images %}<span class="glyphicon glyphicon-picture"  class="imageIcon" data-toggle="tooltip" data-placement="top" title="Images"></span> {% endif %}{% if media %}<span class="glyphicon glyphicon-play" class="mediaIcon" data-toggle="tooltip" data-placement="bottom" title="Audio or Video"></span> {% endif %}{% if feature.site %}<span class="glyphicon glyphicon-home" class="siteIcon" data-toggle="tooltip" data-placement="right" title="Part of {{ feature.site }}"></span>{% endif %}
-			</div>
-		{% endif %}
 		{% if feature.short_description %}
 			<p class="feature-description">{{ feature.short_description }}</p>
 		{% endif %}
-		<div class="btn-group"><a href="{% url 'detail' feature.id %}" class="btn btn-default btn-sm">Read More</a> <a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> {% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %}</div>
+		<div class="btn-group"><a href="{% url 'detail' feature.id %}" class="btn btn-default btn-sm {% if not documents and not images and not media %} disabled{% endif %}">Read More</a> <a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-default btn-sm">Add Content</a> {% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %}</div>
 	</div>
 </div>
 <script>
