--- a/templates/map/tag.html
+++ b/templates/map/tag.html
@@ -1,12 +1,30 @@
-{% extends 'map/base.html' %}
-{% block content %}
-		<div id="map" class="map-large"></div>
-		<script>
+{% extends 'map/results_base.html' %}
+{% block results_title %}<h2>All places tagged "{{ tag }}"</h2>{% endblock %}
 
-			var title_box_title = 'Showing all places tagged "{{ tag }}"';
+{% block results %}
 
-			var jsonUrl = '{% url "features_by_tag" tag %}';
-			loadFeatures(jsonUrl, 'main', false);
-		</script>
+<div class="tab-content">
+	{% if features %}
+	<div role="tabpanel" class="tab-pane active" id="features">
+		{% for feature in features %}
+			<h3><a href="{% url 'detail' feature.id %}">{{ feature }}</a></h3>
+			<p class="results-preview">{{ feature.short_description }}</p>
+			{% for tag in feature.tags.all %}
+				<a href="{% url 'tag' tag %}" class="btn btn-default btn-xs tag">{{ tag }}</a> 
+			{% endfor %}
+			<hr />
+		{% endfor %}
+	</div>
+	{% endif %}
+</div>
+
+{% endblock %}
+{% block results_script %}
+<script>
+	var title_box_title = 'Showing all places tagged "{{ tag }}"';
+
+	var jsonUrl = '{% url "features_by_tag" tag %}';
+	loadFeatures(jsonUrl, 'main', false);
+</script>
 
 {% endblock %}
