--- a/templates/map/ugc_thanks.html
+++ b/templates/map/ugc_thanks.html
@@ -5,10 +5,10 @@
 <div class="jumbotron ugc-jumbotron" style="background-image: url('/media/{{ feature.thumbnail }}');">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-sm-12 col-md-8 col-md-offset-2">
 				<h1 class="text-center">Thank You.</h1>
+				<h2 class="text-center">Your contribution will be moderated by a Survey of London editor shortly. We'll email you as soon as it's been published.</h2>
 				<br />
-				<p class="text-center">Your contribution will be moderated by a Survey of London editor shortly.</p>
 				<div class="text-center">
 					<a href="{% url 'detail' feature.id %}" class="btn btn-default btn-lg">Return to {{ feature }}</a> 
 					<a href="{% url 'user_overview' %}" class="btn btn-default btn-lg">See All Your Contributions</a>
