--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="jumbotron">
+<div class="jumbotron whitechapel_front_page">
 	
 	<style>
 		/*.carousel_image {
@@ -11,7 +11,7 @@
 			top: 0;
 		}*/
 		.carousel {
-			height: 600px;
+			height: 500px;
 			width: 100%;
 			position: absolute;
 			top: 0;
@@ -32,20 +32,52 @@
 		<div style="background-image: url('/media/{{ page.banner_image_1 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
 		<div style="background-image: url('/media/{{ page.banner_image_2 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
 		<div style="background-image: url('/media/{{ page.banner_image_3 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
-		<!--<div><img class="carousel_image" src="/media/{{ page.banner_image_1 }}" /></div>
-		<div><img class="carousel_image" src="/media/{{ page.banner_image_2 }}" /></div>
-		<div><img class="carousel_image" src="/media/{{ page.banner_image_3 }}" /></div>-->
 	</div>
 </div>
 
 <div class="container">
 	<div class="row"><!-- Front Page Text -->
-		<div class="col-xs-12">
+		<div class="col-xs-12 col-md-8">
 			<div class="front-page-about">
+				<h1 class="front-page-heading">{{ page.title }}</h1>
 				{{ page.body|safe }}
 			</div>
 		</div>
+		<div class="col-xs-12 col-md-4">
+			<h1 class="front-page-heading">Latest Contributions</h1>
+			{% for item in latest|slice:":5" %}
+			{% if item.created != None %}
+			<div>
+			<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
+			<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+			{% if item.body_processed %}
+			<p class="results-preview">{{ item.body_processed|truncatewords_html:20|striptags }}</p>
+			{% elif item.description %}
+			<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+			{% endif %}
+			</div>
+			{% endif %}
+
+			{% endfor %}
+		</div>
 	</div><!-- / Front Page Text -->
+
+	
+	{% if page.images %}
+	<div class="row"><!-- Featured Images -->
+		<div class="col-xs-12"><h1 class="front-page-heading">Featured Images</h1></div>
+	</div>
+	<div class="row">
+		{% load thumbnail %}
+		{% for image in page.images.all %}
+		<div class="col-xs-12 col-md-4">
+		<a href="{% url 'detail' image.feature.id %}#images"><img src="{% thumbnail image.file 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
+		<h3><span class="text-muted"><a href="{% url 'detail' image.feature.id %}#images">{{ image.title }}</a></span><br />
+		<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a> | {{ image.feature }} | {{ image.created }}</span></h3>
+		</div>
+ 		{% endfor %}
+	</div>	
+	{% endif %}
 
 	<div class="row"><!-- Featured Content and Latest Images -->
 		<div class="col-xs-12 col-md-8"><!-- Featured Contributions -->
@@ -55,24 +87,14 @@
 				{% if document.published == True %}
 				<div class="{% cycle 'col-xs-12' 'col-xs-12 col-md-6' 'col-xs-12 col-md-6' %}">
 					<h3><a href="{% url 'detail' document.feature.id %}#{{ document.document_type }}?{{ document.title|slugify }}">{{ document.title }}</a><br /><span class="small"><a href="{% url 'all_content_by_author' document.author.id %}">{{ document.author.userprofile.display_name }}</a> | {{ document.feature }} | Submitted {{ document.last_edited }}</span></h3>
-					{{ document.body|safe|truncatewords_html:40 }}
+					<p>{{ document.body|safe|truncatewords_html:40|striptags }}</p>
 				</div>
 				{% endif %}
 				{% endfor %}
 			</div>
 		</div><!-- / Featured Contributions -->
 		
-		{% if page.images %}
-		<div class="col-xs-12 col-md-4"><!-- Featured Images -->
-			<h1 class="front-page-heading">Featured Images</h1>
-			{% load thumbnail %}
-			{% for image in page.images.all %}
-			<a href="{% url 'detail' image.feature.id %}#images"><img src="{% thumbnail image.file 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
-			<h3><span class="text-muted"><a href="{% url 'detail' image.feature.id %}#images">{{ image.title }}</a></span><br />
-			<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a> | {{ image.feature }} | {{ image.created }}</span></h3>
- 		{% endfor %}
-		</div>
-		{% endif %}
+		
 
 		<div class="col-xs-12 col-md-4"><!-- Latest Images -->
 			<h1 class="front-page-heading">Latest Images</h1>
@@ -92,7 +114,7 @@
 
 	<div class="row front-page-media"><!-- Featured Media -->
 		<div class="col-xs-12">
-			<h1 class="front-page-heading">Video and Audio</h1>
+			<h1 class="front-page-heading">Audio and Video</h1>
 		</div>
 		{% load embed_video_tags %}
 		<div class="row">
@@ -123,7 +145,7 @@
 	<div class="row themed-content">
 		{% for category in categories %}
 		{% if category.feature_set.all %}
-		<div class="col-xs-12 col-md-4">
+		<div class="col-xs-12 col-md-3">
 			<div>
 				<a href="{% url 'map.views.category' category.id %}"><img src="{% thumbnail category.thumbnail 360x204 %}"></a>
 				<p><a href="{% url 'map.views.category' category.id %}">{{ category.name }}</a></p>
