--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -34,7 +34,7 @@
 		<div style="background-image: url('/media/{{ page.banner_image_3 }}'); background-size: cover; display: block; width: 100%; height: 600px; background-position: center center;'"></div>
 	</div>
 </div>
-
+{% load thumbnail %}
 <div class="container">
 	<div class="row"><!-- Front Page Text -->
 		<div class="col-xs-12 col-md-8">
@@ -43,24 +43,11 @@
 				{{ page.body|safe }}
 			</div>
 		</div>
-		<div class="col-xs-12 col-md-4">
-			<h1 class="front-page-heading">Latest Contributions</h1>
-			{% for item in latest|slice:":5" %}
-			{% if item.created != None %}
-			<div>
-			<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
-			<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
-			{% if item.body_processed %}
-			<p class="results-preview">{{ item.body_processed|truncatewords_html:20|striptags }}</p>
-			{% elif item.description %}
-			<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
-			{% endif %}
-			</div>
-			{% endif %}
-
-			{% endfor %}
-		</div>
-	</div><!-- / Front Page Text -->
+		<div class="col-xs-12 col-md-4"><!-- News -->
+			<h1 class="front-page-heading">News</h1>
+			<p>News Content to go here when the blog function's been activated</p>
+		</div><!-- / News -->
+	</div>
 
 	
 	{% if page.images %}
@@ -68,7 +55,6 @@
 		<div class="col-xs-12"><h1 class="front-page-heading">Featured Images</h1></div>
 	</div>
 	<div class="row">
-		{% load thumbnail %}
 		{% for image in page.images.all %}
 		<div class="col-xs-12 col-md-4">
 		<a href="{% url 'detail' image.feature.id %}#images"><img src="{% thumbnail image.file 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
@@ -94,22 +80,37 @@
 			</div>
 		</div><!-- / Featured Contributions -->
 		
-		
+		<div class="col-xs-12 col-md-4"><!-- Latest contributions -->
+			<h1 class="front-page-heading">Latest Contributions</h1>
+			{% for item in latest|slice:":4" %}
+			{% if item.created != None %}
+				{% if item.file %}
+				<div class="media">
+					<div class="media-left">
+						<a href="{% url 'detail' item.feature.id %}#images"><img src="{% thumbnail item.file 64x64 crop='0,0' %}" class="img-rounded"></a>
+					</div>
+					<div class="media-body">
+						<h3 class="media-heading"><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
+						<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+						<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+					</div>
+				</div>
+				{% else %}
+				<div>
+					<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
+					<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+					{% if item.body_processed %}
+					<p class="results-preview">{{ item.body_processed|truncatewords_html:20|striptags }}</p>
+					{% elif item.description %}
+					<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+					{% endif %}
+				</div>
+				{% endif %}		
+			{% endif %}
 
-		<div class="col-xs-12 col-md-4"><!-- Latest Images -->
-			<h1 class="front-page-heading">Latest Images</h1>
-			{% for image in images %}
-			<div class="media">
-				<div class="media-left">
-					<a href="{% url 'detail' image.feature.id %}#images"><img src="{% thumbnail image.file 64x64 crop='0,0' %}" class="img-rounded"></a>
-				</div>
-				<div class="media-body">
-					<h4 class="media-heading"><a href="{% url 'detail' image.feature.id %}#images">{{ image.feature }}</a><br /><span class="text-muted">{{ image.title }}</span></h4>
-					<span class="small"><a href="{% url 'all_content_by_author' image.author.id %}">{% if image.author.userprofile.display_name %}{{ image.author.userprofile.display_name }}{% else %}{{ image.author }}{% endif %}</a> | {{ image.created }}</span>
-				</div>
-			</div>
 			{% endfor %}
-		</div><!-- / Latest Images -->
+		</div> <!-- / Latest contributions -->
+
 	</div><!-- / Featured Content and Latest Images -->
 
 	<div class="row front-page-media"><!-- Featured Media -->
