many tweaks to search view. Swapped tabs for pills as it breaks less when there\'s a line break

--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -29,7 +29,7 @@
 		{% else %}
 
 
-			<ul class="nav nav-tabs" role="tablist" id="docTabs">
+			<ul class="nav nav-pills" role="tablist" id="docTabs">
 				{% if histories %}
 					<li role="presentation" class="active"><a href="#history" aria-controls="history" role="tab" data-toggle="tab">Research</a></li>
 				{% endif %}
