--- a/templates/map/user_overview.html
+++ b/templates/map/user_overview.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="container">
 	<div class="row">
-		<div class="col-xs-12 col-md-8 col-md-offset-2 content">
+		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			{% if request.user == user %}
 				<h1>Your Contributions</h1>
-				<ul class="nav nav-tabs" role="tablist" id="contentTabs">
+				<ul class="nav nav-pills" role="tablist" id="contentTabs">
 					<li role="presentation" class="active"><a href="#pending" aria-controls="pending" role="tab" data-toggle="tab">In Moderation</a></li>
 					<li role="presentation"><a href="#drafts" aria-controls="drafts" role="tab" data-toggle="tab">Drafts</a></li>
 					<li role="presentation"><a href="#published" aria-controls="published" role="tab" data-toggle="tab">Research and Memories</a></li>
@@ -79,7 +79,7 @@
 					</div>
 					<div role="tabpanel" class="tab-pane" id="images">
 						{% if not published_images %}
-							<h3 class="text-muted">You haven't had any images published yet</h3>
+							<h3 class="text-muted">You don't have any published images yet.</h3>
 						{% else %}
 						<br />
 						{% for image in published_images %}
@@ -100,7 +100,7 @@
 					</div>
 					<div role="tabpanel" class="tab-pane" id="media">
 						{% if not published_media %}
-							<h3 class="text-muted">You haven't had any audio or video published yet</h3>
+							<h3 class="text-muted">You don't have any published audio or video yet.</h3>
 						{% else %}
 						{% load embed_video_tags %}
 						{% for item in published_media %}
